# MathModel-SchoolComp

./: API文档.md  README.md  前端各个文件的作用.md  后端各个文件的作用.md  需求文档.md
backend/: pyproject.toml  requirements.txt
backend/app/: audit.py  config.py  db.py  main.py  models.py  security.py
backend/app/routers/: admin.py  auth.py  public.py  student.py  teacher.py
docs/: 数据库表作用说明.md  数据库设计.md  测试用例-竞赛管理.md  测试账号.md  队伍测试.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: adminAnnouncements.js  adminTeams.js  audit.js  auth.js  competitions.js  config.js  public.js  register.js  student.js  teacher.js  teachers.js
frontend/src/router/: index.js
frontend/src/views/: AdminAnnouncements.vue  AdminAuditLogs.vue  AdminCompetitionManage.vue  AdminDashboard.vue  AdminManagerLogin.vue  Home.vue  StudentRegister.vue  TeacherBulkGenerate.vue  TeacherDashboard.vue  TeacherLogin.vue  TeacherSubmissionDetail.vue  TeacherSubmissions.vue  TeamEnroll.vue
